--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -26,7 +26,7 @@
 	  </div>
         </div> <!--welcome-->
 	
-        {% include news.html %}
+        <!--{% include news.html %}-->
 			
         {% include footer.html %}
       
