--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -500,7 +500,7 @@
 	{
 		display: inline-block;
 		/*margin-bottom: 1em;*/
-		border-radius: 20%;
+		/* border-radius: 20%; */
 	}
 
 /*********************************************************************************/
