--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -26,7 +26,7 @@
 	        </div>
         </div> <!--welcome-->
 	
-          
+          <!-- include news.html somehow had to remove the jekyll boundaries -->
 			
           {% include footer.html %}
       
