--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -26,7 +26,7 @@
 	        </div>
         </div> <!--welcome-->
 	
-          <!-- include news.html somehow had to remove the jekyll boundaries -->
+          <!-- include news.html somehow had to remove the jekyll boundaries yep indeed https://stackoverflow.com/questions/27975757/comment-out-an-include-statement-inside-an-html-file-using-jekyll -->
 			
           {% include footer.html %}
       
