Update footer links to new Templated URLs
was redirecting to scam / gambling website

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <div id="copyright">
   <span>
     &copy; {{ site.time | date: '%Y' }} {{ site.author }}.
-    Design based on the <a href="https://templated.co/privy">Privy</a> template 
-    from <a href="http://templated.co" rel="nofollow">Templated</a>.
+    Design based on the <a href="https://templated.live/privy/">Privy</a> template 
+    from <a href="https://templated.live/" rel="nofollow">Templated</a>.
     This website is hosted on <a href="https://github.com/Guillaume-Garrigos/guillaume-garrigos.github.io">Github</a>.
   </span>
 </div>
